--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "mongoose": "^5.10.7",
     "multer": "^1.4.2",
     "nanoid": "^3.1.20",
+    "node-notifier": "^10.0.1",
     "nodemailer": "^6.4.12",
+    "popups": "^1.1.3",
     "uuid": "^8.3.2",
     "validator": "^13.1.17"
   },
