--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "node-notifier": "^10.0.1",
     "nodemailer": "^6.4.12",
     "popups": "^1.1.3",
+    "technicalindicators": "^3.1.0",
     "uuid": "^8.3.2",
     "validator": "^13.1.17"
   },
