--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "alpinejs": "^3.13.2",
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
+    "ccxt": "^4.1.57",
     "cloudinary": "^1.37.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
@@ -39,6 +40,7 @@
     "nodemailer": "^6.4.12",
     "popups": "^1.1.3",
     "technicalindicators": "^3.1.0",
+    "tulind": "^0.8.20",
     "uuid": "^8.3.2",
     "validator": "^13.1.17"
   },
